[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["Ruben Bonilla Martinez <ruben@capaball.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
mysqlclient = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
